# cosdatabricksapps

./: .env.example  .gitignore  MIGRATION.md  README.md  app.yaml  pytest.ini  requirements.txt
app/: admin_demo_service.py  main.py
app/static/: admin.css  admin.js  login.js  public.js  stream.js
app/templates/: admin.html  login.html  public.html
dataschool-3rd-project-team3/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_notebook.py
dataschool-3rd-project-team3/api/: main.py
dataschool-3rd-project-team3/docs/: ARCHITECTURE_PLAN.md  LOCAL_DEVELOPMENT.md
dataschool-3rd-project-team3/rbac_rag/: answer_guard.py  api_service.py  app.py  audit.py  engine.py  env_check.py  llm.py  logging_utils.py  mappings.py  prompts.py  rbac.py  router.py  runner.py  settings.py  sql_client.py  sql_validator.py
dataschool-3rd-project-team3/scripts/: audit_cos_adb_metadata.py  check_env.py
dataschool-3rd-project-team3/tests/: test_answer_guard.py  test_api.py  test_api_service.py  test_engine_post_check.py  test_env_check.py  test_llm_utils.py  test_mappings.py  test_rbac.py  test_router.py  test_runner_formatting.py  test_sql_client_auth.py  test_sql_client_config.py  test_sql_validator.py
dataschool-3rd-project-team3/tests/integration/: test_databricks_smoke.py
tests/: test_admin_demo_service.py  test_integrated_app.py
